welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: value lenth is not a member of Array[java.awt.Color]
	recule(T.lenth-1);
                 ^